# reproit-cloud

./: .dockerignore  .env.example  .gitignore  .reproit-cli-commit  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  NOTICE  README.md  SECURITY.md  SUPPORT.md  compose.neon.yml  compose.object-store.yml  compose.yml
.github/workflows/: ci.yml  release.yml  writing-style.yml
contracts/: backend-openapi.json
docs/: release.md  upgrading.md
docs/architecture/: code-organization.md  multi-tenancy.md  scheduler.md  self-hosted.md
docs/ci/: reproit-repro.yml
docs/operations/: backup-restore.md
examples/: gate_stack.rs
experimental/reproit-backend/: Cargo.toml
experimental/reproit-backend/src/: lib.rs
protocol/: Cargo.toml
protocol/fixtures/: event-lines-v1.json
protocol/src/: causal.rs  environment.rs  lib.rs  tests.rs
scripts/: audit-boundary.sh  check-release-version.sh  cli-contracts.sh  smoke-self-hosted.sh  worker-poll.sh
src/: backend_contract.rs  bootstrap.rs  captures.rs  cli.rs  compose.rs  edition.rs  http_security.rs  lib.rs  mail.rs  main.rs  operations.rs  router.rs  sweep.rs  tests.rs
src/auth/: account.rs  invitation_tests.rs  invitations.rs  keys.rs  members.rs  mod.rs  organizations.rs  password.rs  projects.rs  session.rs  sso.rs
src/db/: artifacts.rs  control.rs  mod.rs  schema.rs  secrets.rs  tenant.rs
src/db/control/: access.rs  credentials.rs  identity.rs  organizations.rs  tenant_registry.rs
src/db/tenant/: captures.rs  ingest.rs  jobs.rs  projects.rs  telemetry.rs  traffic.rs  triage.rs
src/ingest/: aggregation.rs  bucket_api.rs  buckets.rs  cohorts.rs  evidence.rs  export.rs  impact.rs  mod.rs  replay.rs  tests.rs
src/integrations/: dispatch.rs  github.rs  jira.rs  linear.rs  mod.rs  shortcut.rs
src/jobs/: mod.rs  scheduler.rs  worker.rs
src/tenancy/: blob.rs  gate_drills.rs  gate_evidence.rs  integration_tests.rs  mod.rs  pool.rs  provider.rs  provisioner.rs  resolver.rs
src/tenancy/blob/: r2.rs
src/triage/: mod.rs  resolution.rs  tests.rs
static/: app.html  app.js  capture-upload.html  capture-upload.js  capture.html  capture.js  cli.html  cli.js  invite.html  invite.js  login.html  login.js  selects.js  signup.html  signup.js  styles.css  triage.js
static/demo/: app.js  index.html  reproit-web.js  styles.css
tests/: architecture.rs
tests/golden/fixtures/: fixture-spec-v2.json  oracle-registry.json
validation/: backend-adapter-parity.sh  backend-contract-live.sh
